feat(workspace): 支持研究工作区永久删除
